// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesContainer component renders correctly MoviesContainer grid render, unmount and scroll correctly 1`] = `
<main
  className="container gridMovieList"
>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="70%"
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        onClick={[Function]}
        type="button"
      >
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn ghost"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="title"
          title="test"
        >
          <a
            href="/movie/:1"
            onClick={[Function]}
          >
            test
          </a>
        </h3>
        <p />
      </div>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="70%"
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        onClick={[Function]}
        type="button"
      >
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn ghost"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="title"
          title="test2"
        >
          <a
            href="/movie/:2"
            onClick={[Function]}
          >
            test2
          </a>
        </h3>
        <p />
      </div>
    </div>
  </article>
</main>
`;

exports[`MoviesContainer component renders correctly MoviesContainer table render correctly 1`] = `
Array [
  <main
    className="container tableMovieList"
  >
    <article
      className="card"
    >
      <img
        alt="Poster"
        src={
          Object {
            "process": [Function],
          }
        }
      />
      <div
        className="info"
      >
        <h2
          className="title"
        >
          <a
            href="/movie/:1"
            onClick={[Function]}
          >
            test
          </a>
        </h2>
        <p
          className="overview"
        >
          desc
        </p>
        <div
          className="rating"
        />
        <button
          aria-label="Watch Now"
          className="btn primary"
          onClick={[Function]}
          type="button"
        >
          Watch Now
        </button>
      </div>
    </article>
    <article
      className="card"
    >
      <img
        alt="Poster"
        src={
          Object {
            "process": [Function],
          }
        }
      />
      <div
        className="info"
      >
        <h2
          className="title"
        >
          <a
            href="/movie/:2"
            onClick={[Function]}
          >
            test2
          </a>
        </h2>
        <p
          className="overview"
        >
          desc2
        </p>
        <div
          className="rating"
        />
        <button
          aria-label="Watch Now"
          className="btn primary"
          onClick={[Function]}
          type="button"
        >
          Watch Now
        </button>
      </div>
    </article>
  </main>,
  <div
    className="spinner"
  >
    <div
      className="ellipsis"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
    <p
      className="title"
    >
      Loading
    </p>
  </div>,
]
`;

exports[`MoviesContainer component renders correctly MoviesContainer without layout renders correctly 1`] = `
Array [
  <main
    className="container"
  />,
  <div
    className="spinner"
  >
    <div
      className="ellipsis"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
    <p
      className="title"
    >
      Loading
    </p>
  </div>,
]
`;

exports[`MoviesContainer component renders correctly MoviesContainer without movies table render correctly 1`] = `
Array [
  <main
    className="container"
  />,
  <div
    className="spinner"
  >
    <div
      className="ellipsis"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
    <p
      className="title"
    >
      Loading
    </p>
  </div>,
]
`;
